@@ -32,7 +32,7 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
 
-import android.icu.dev.test.TestFmwk;
+import android.icu.dev.test.CoreTestFmwk;
 import android.icu.text.DateFormat;
 import android.icu.text.SimpleDateFormat;
 import android.icu.util.Calendar;
@@ -49,7 +49,7 @@ import android.icu.testsharding.MainTestShard;
  **/
 @MainTestShard
 @RunWith(JUnit4.class)
-public class DateFormatRegressionTest extends TestFmwk {
+public class DateFormatRegressionTest extends CoreTestFmwk {
     /**
      * @bug 4029195
      */
@@ -991,7 +991,7 @@ public class DateFormatRegressionTest extends TestFmwk {
             logln(what + "=" + s);
             first = s.charAt(0);
             if(first<kHindiZero || first>(kHindiZero+9)) {
-                errln(what + "- wrong digit,  got " + s + " (integer digit value " + new Integer(first).toString());
+                errln(what + "- wrong digit,  got " + s + " (integer digit value " + Integer.valueOf(first));
             }
         }
 
@@ -1002,7 +1002,7 @@ public class DateFormatRegressionTest extends TestFmwk {
             logln(what + ": " + s);
             first = s.charAt(0);
             if(first<kArabicZero || first>(kArabicZero+9)) {
-                errln(what + " wrong digit, got " + s + " (integer digit value " + new Integer(first).toString());
+                errln(what + " wrong digit, got " + s + " (integer digit value " + Integer.valueOf(first));
             }
         }
 
@@ -1013,7 +1013,7 @@ public class DateFormatRegressionTest extends TestFmwk {
             logln(what + ": " + s);
             first = s.charAt(0);
             if(first<kArabicZero || first>(kArabicZero+9)) {
-                errln(what + " wrong  digit but got " + s + " (integer digit value " + new Integer(first).toString());
+                errln(what + " wrong  digit but got " + s + " (integer digit value " + Integer.valueOf(first));
             }
         }
         {
@@ -1023,7 +1023,7 @@ public class DateFormatRegressionTest extends TestFmwk {
             logln(what + ": " + s);
             first = s.charAt(0);
             if(first<kLatinZero || first>(kLatinZero+9)) {
-                errln(what + " wrong  digit but got " + s + " (integer digit value " + new Integer(first).toString());
+                errln(what + " wrong  digit but got " + s + " (integer digit value " + Integer.valueOf(first));
             }
         }
 
@@ -1034,7 +1034,7 @@ public class DateFormatRegressionTest extends TestFmwk {
             logln(what+ ": " + s);
             first = s.charAt(0);
             if(first<kArabicZero || first>(kArabicZero+9)) {
-                errln(what + " wrong  digit but got " + s + " (integer digit value " + new Integer(first).toString());
+                errln(what + " wrong  digit but got " + s + " (integer digit value " + Integer.valueOf(first));
             }
         }
 
@@ -1045,7 +1045,7 @@ public class DateFormatRegressionTest extends TestFmwk {
             logln(what+ ": " + s);
             first = s.charAt(0);
             if(first<kArabicZero || first>(kArabicZero+9)) {
-                errln(what + " wrong  digit but got " + s + " (integer digit value " + new Integer(first).toString());
+                errln(what + " wrong  digit but got " + s + " (integer digit value " + Integer.valueOf(first));
             }
         }
 
@@ -1056,7 +1056,7 @@ public class DateFormatRegressionTest extends TestFmwk {
             logln(what+ ": " + s);
             first = s.charAt(0);
             if(first<kArabicZero || first>(kArabicZero+9)) {
-                errln(what + " wrong  digit but got " + s + " (integer digit value " + new Integer(first).toString());
+                errln(what + " wrong  digit but got " + s + " (integer digit value " + Integer.valueOf(first));
             }
         }
     }
@@ -1276,7 +1276,7 @@ public class DateFormatRegressionTest extends TestFmwk {
     @Test
     public void TestT10110() {
         try {
-            SimpleDateFormat formatter = new SimpleDateFormat("Gy年M月d日E", new Locale("zh_Hans"));
+            SimpleDateFormat formatter = new SimpleDateFormat("Gy年M月d日E", Locale.forLanguageTag("zh-Hans"));
             /* Object parsed = */ formatter.parseObject("610000");
         }
         catch(ParseException pe) {
