@@ -22,7 +22,7 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
 
-import android.icu.dev.test.TestFmwk;
+import android.icu.dev.test.CoreTestFmwk;
 import android.icu.text.DecimalFormat;
 import android.icu.text.NumberFormat;
 import android.icu.testsharding.MainTestShard;
@@ -32,7 +32,7 @@ import android.icu.testsharding.MainTestShard;
  **/
 @MainTestShard
 @RunWith(JUnit4.class)
-public class NumberFormatRoundTripTest extends TestFmwk {
+public class NumberFormatRoundTripTest extends CoreTestFmwk {
 
     public double MAX_ERROR = 1e-14;
     public double max_numeric_error = 0.0;
@@ -150,11 +150,11 @@ public class NumberFormatRoundTripTest extends TestFmwk {
     }
 
     private void _test(NumberFormat fmt, double value) {
-        _test(fmt, new Double(value));
+        _test(fmt, Double.valueOf(value));
     }
 
     private void _test(NumberFormat fmt, long value) {
-        _test(fmt, new Long(value));
+        _test(fmt, Long.valueOf(value));
     }
 
     private void _test(NumberFormat fmt, Number value) {
@@ -166,7 +166,7 @@ public class NumberFormatRoundTripTest extends TestFmwk {
         else
             s = fmt.format(value.longValue());
 
-        Number n = new Double(0);
+        Number n = 0d;
         boolean show = verbose;
         if (DEBUG)
             logln(
